# multimodal-registration

./: .gitignore  404.html  LICENSE  README.md  environment-p9.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml
api/reference/: index.html
docs/: index.md  installation.md
docs/api/: reference.md
docs/guide/: export.md  gpu.md  interactive.md  workflow.md
docs/theory/: crystallography.md  deformation.md  registration.md
guide/export/: index.html
guide/gpu/: index.html
guide/interactive/: index.html
guide/workflow/: index.html
installation/: index.html
search/: search_index.json
src/multimodal_registration/: __init__.py  backends.py  dct.py  deformation.py  dvc.py  interactive.py  io.py  pct.py  registration.py  utils.py
theory/crystallography/: index.html
theory/deformation/: index.html
theory/registration/: index.html
